# my-tiny-vm

./: CMakeLists.txt  README.md
compiler/: compiler.cpp  compiler.hpp
instructions/: instructions.cpp  instructions.hpp  types.hpp
tests/: compiler-test.cpp  fibonacci-test.cpp  instructions-test.cpp  vm-test.cpp
vm/: vm.cpp  vm.hpp
